--- a/index.html
+++ b/index.html
@@ -2,21 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/transparent.png" />
+    <title>Axacrate - Smart Warehouse Management System</title>
+    <meta name="description" content="Axacrate WMS: RFID-based smart warehouse management system with real-time tracking, automation & inventory intelligence.">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AxaCrate</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap"
-      rel="stylesheet"
-    />
-    <link rel='stylesheet'
-        href='https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css">
+    <!-- Optional: Open Graph -->
+    <meta property="og:title" content="Axacrate - Smart Warehouse Management System">
+    <meta property="og:description" content="Axacrate WMS: RFID-based smart warehouse management system with real-time tracking, automation & inventory intelligence.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.axacrate.com">
   </head>
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <body>
     <div id="root"></div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
