Text-Split + New layout Changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/3.0.0/uicons-regular-rounded/css/uicons-regular-rounded.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Optional: Open Graph -->
     <meta property="og:title" content="Axacrate - Smart Warehouse Management System">
     <meta property="og:description" content="Axacrate WMS: RFID-based smart warehouse management system with real-time tracking, automation & inventory intelligence.">
